<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/observableFieldsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observable_fields_button"
            app:layout_constraintBottom_toTopOf="@id/rxBindingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/rxBindingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rx_databinding_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/liveDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_data_button"
            app:layout_constraintTop_toBottomOf="@id/rxBindingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
